# project_ingles

./: .gitignore  CMakeLists.txt  README.md  build-debug.sh  build-release.sh  build.sh  load.cpp
data/: verbs.json
lib/: CMakeLists.txt
lib/english/: CMakeLists.txt  english.h  english_verbs.cpp  english_verbs.h
